@@ -1,81 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2016/08/24 13:27:47 wiz Exp $
-bin/__main__.py
-bin/undebt
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/undebt/__init__.py
-${PYSITELIB}/undebt/__init__.pyc
-${PYSITELIB}/undebt/__init__.pyo
-${PYSITELIB}/undebt/__main__.py
-${PYSITELIB}/undebt/__main__.pyc
-${PYSITELIB}/undebt/__main__.pyo
-${PYSITELIB}/undebt/cmd/__init__.py
-${PYSITELIB}/undebt/cmd/__init__.pyc
-${PYSITELIB}/undebt/cmd/__init__.pyo
-${PYSITELIB}/undebt/cmd/logger.py
-${PYSITELIB}/undebt/cmd/logger.pyc
-${PYSITELIB}/undebt/cmd/logger.pyo
-${PYSITELIB}/undebt/cmd/logic.py
-${PYSITELIB}/undebt/cmd/logic.pyc
-${PYSITELIB}/undebt/cmd/logic.pyo
-${PYSITELIB}/undebt/cmd/main.py
-${PYSITELIB}/undebt/cmd/main.pyc
-${PYSITELIB}/undebt/cmd/main.pyo
-${PYSITELIB}/undebt/examples/__init__.py
-${PYSITELIB}/undebt/examples/__init__.pyc
-${PYSITELIB}/undebt/examples/__init__.pyo
-${PYSITELIB}/undebt/examples/attribute_to_function.py
-${PYSITELIB}/undebt/examples/attribute_to_function.pyc
-${PYSITELIB}/undebt/examples/attribute_to_function.pyo
-${PYSITELIB}/undebt/examples/class_inherit_object.py
-${PYSITELIB}/undebt/examples/class_inherit_object.pyc
-${PYSITELIB}/undebt/examples/class_inherit_object.pyo
-${PYSITELIB}/undebt/examples/contextlib_nested.py
-${PYSITELIB}/undebt/examples/contextlib_nested.pyc
-${PYSITELIB}/undebt/examples/contextlib_nested.pyo
-${PYSITELIB}/undebt/examples/dbl_quote_docstring.py
-${PYSITELIB}/undebt/examples/dbl_quote_docstring.pyc
-${PYSITELIB}/undebt/examples/dbl_quote_docstring.pyo
-${PYSITELIB}/undebt/examples/exec_function.py
-${PYSITELIB}/undebt/examples/exec_function.pyc
-${PYSITELIB}/undebt/examples/exec_function.pyo
-${PYSITELIB}/undebt/examples/hex_to_bitshift.py
-${PYSITELIB}/undebt/examples/hex_to_bitshift.pyc
-${PYSITELIB}/undebt/examples/hex_to_bitshift.pyo
-${PYSITELIB}/undebt/examples/method_to_function.py
-${PYSITELIB}/undebt/examples/method_to_function.pyc
-${PYSITELIB}/undebt/examples/method_to_function.pyo
-${PYSITELIB}/undebt/examples/nl_at_eof.py
-${PYSITELIB}/undebt/examples/nl_at_eof.pyc
-${PYSITELIB}/undebt/examples/nl_at_eof.pyo
-${PYSITELIB}/undebt/examples/remove_needless_u_specifier.py
-${PYSITELIB}/undebt/examples/remove_needless_u_specifier.pyc
-${PYSITELIB}/undebt/examples/remove_needless_u_specifier.pyo
-${PYSITELIB}/undebt/examples/remove_unused_import.py
-${PYSITELIB}/undebt/examples/remove_unused_import.pyc
-${PYSITELIB}/undebt/examples/remove_unused_import.pyo
-${PYSITELIB}/undebt/examples/sqla_count.py
-${PYSITELIB}/undebt/examples/sqla_count.pyc
-${PYSITELIB}/undebt/examples/sqla_count.pyo
-${PYSITELIB}/undebt/pattern/__init__.py
-${PYSITELIB}/undebt/pattern/__init__.pyc
-${PYSITELIB}/undebt/pattern/__init__.pyo
-${PYSITELIB}/undebt/pattern/common.py
-${PYSITELIB}/undebt/pattern/common.pyc
-${PYSITELIB}/undebt/pattern/common.pyo
-${PYSITELIB}/undebt/pattern/interface.py
-${PYSITELIB}/undebt/pattern/interface.pyc
-${PYSITELIB}/undebt/pattern/interface.pyo
-${PYSITELIB}/undebt/pattern/python.py
-${PYSITELIB}/undebt/pattern/python.pyc
-${PYSITELIB}/undebt/pattern/python.pyo
-${PYSITELIB}/undebt/pattern/testing.py
-${PYSITELIB}/undebt/pattern/testing.pyc
-${PYSITELIB}/undebt/pattern/testing.pyo
-${PYSITELIB}/undebt/pattern/util.py
-${PYSITELIB}/undebt/pattern/util.pyc
-${PYSITELIB}/undebt/pattern/util.pyo
